--- a/views/pizza.html
+++ b/views/pizza.html
@@ -36,7 +36,14 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="images/pizzeria.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+        <img src="images/pizzeria-450.jpg" 
+             srcset="images/pizzeria-1250.jpg 1250w,
+                     images/pizzeria-650.jpg 650w,
+                     images/pizzeria-450.jpg 450w"
+             sizes="(min-width: 1000px) 300px,
+                    90vw"
+             class="img-responsive" > 
+          
       </div>
       <div class="col-md-8">
         <div class="row">
